src/test/error/class9.lns
{
   class Hoge {
   }
   fn Hoge.func() {
   }
   let hoge = new Hoge();
   hoge.func(); // error
}
